# crispy-doodle

./: CMakeLists.txt
src/: CMakeLists.txt  ce_ut.cpp  chess_engine.c  chess_engine.h  main.c
